kubernetes/apps/database/couchdb/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: couchdb
  namespace: database
  annotations:
    gatus.home-operations.com/endpoint: |-
      dns:
        query-name: couchdb.unscfleet.com
        query-type: A
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - couchdb.unscfleet.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: couchdb
          port: 5984
